# phising-detector

./: .gitignore  README.md  app.py  create_notebook.py  features.py  model_bundle.joblib  phishing_detector.ipynb  predict.py  prepare_data.py  pyproject.toml  train.py
